--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+cffi==1.6.0
+cryptography==1.3.2
 dj-database-url==0.4.0
 Django==1.9.2
+enum34==1.1.6
 gunicorn==19.4.5
+h2==2.3.1
+hpack==2.2.0
+hyper==0.6.0
+hyperframe==3.2.0
+idna==2.1
+ipaddress==1.0.16
 psycopg2==2.6.1
-whitenoise==2.0.6
+pyasn1==0.1.9
+pycparser==2.14
+pyOpenSSL==16.0.0
 requests==2.9.1
-hyper
+six==1.10.0
+whitenoise==2.0.6
